[package]
name = "tracing-telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json","fmt","local-time"] }
teloxide = { version = "0.17.0", features = ["macros"] }
chrono = {version = "*",features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.0", features = ["full"] }
tracing-core = "0.1.34"
anyhow = "1.0.100"
rand = "0.9.2"
futures = "0.3"
futures-util = "0.3"